employee.jsp added some pop up features , mysql files are added and new Depreciated method resolve